Parameterized asset location
Former-commit-id: 21029717646df62d24c93aae9cd06d2b1c2a77f0
Former-commit-id: 3022d1dbdb2925198de2810edb502f6516ed307a

--- a/includes/topnav.html
+++ b/includes/topnav.html
@@ -15,7 +15,7 @@
 <div {% if page.fixednav == true %}class="navbar-fixed"{% endif %}>
   <nav class="z-depth-0  main {% if page.transparentnav == true %}transparent{% endif %} " role="navigation">
     <div class="nav-wrapper">
-    {% if page.logosnav == true %}<a href="/" class="left navlogo"><img src="/course-common/assets/img/logo/nbislogo-green.svg" style="height:48px;margin-top:8px;padding:0px;margin-left:8px"></a>{% endif %}
+    {% if page.logosnav == true %}<a href="/" class="left navlogo"><img src="{{ site.baseurl }}/course-common/assets/img/logo/nbislogo-green.svg" style="height:48px;margin-top:8px;padding:0px;margin-left:8px"></a>{% endif %}
       <ul class="right hide-on-med-and-down">
       {% for m in site.menu %}
         {% if m.submenus %}
@@ -25,7 +25,7 @@
         {% endif %}
       {% endfor %}
 
-        {% if page.logosnav == true %}<li><a href="https://www.scilifelab.se" class="right navlogo"><img src="/course-common/assets/img/logo/scilifelab-green-white.png" class="scilifelogo"></a></li>{% endif %}
+        {% if page.logosnav == true %}<li><a href="https://www.scilifelab.se" class="right navlogo"><img src="{{ site.baseurl }}/course-common/assets/img/logo/scilifelab-green-white.png" class="scilifelogo"></a></li>{% endif %}
       </ul>
 
       <a href="#" data-activates="nav-mobile" class="button-collapse right"><i class="material-icons">menu</i></a>
