--- a/includes/footer.html
+++ b/includes/footer.html
@@ -23,21 +23,21 @@
 <div id="funding" class="row" style="margin-bottom:0px">
         <div class="center-block">
                 <p style="text-align:center;background-color:white">
-                <a href="http://www.vr.se"><img alt="Vetenskapsrådet" src="/course-common/assets/img/logo/vetenskapsradet-logotyp.png" style="height:65px;padding:5px" ></a>
-                <a href="http://www.scilifelab.se"><img alt="Scilifelab" src="/course-common/assets/img/logo/scilifelab.jpg" style="height:40px;padding:5px 0px 5px 0px" ></a>
-                <a href="http://www.liu.se"><img alt="Linköping University" src="/course-common/assets/img/logo/liu.jpg" style="height:65px;padding:5px" ></a>
-                <a href="http://www.chalmers.se"><img alt="Chalmers University" src="/course-common/assets/img/logo/chalmers.png" style="height:65px;padding:5px" ></a>
-                <a href="http://www.gu.se"><img alt="University of Gothenburg" src="/course-common/assets/img/logo/gu.jpg" style="height:65px;padding:5px" ></a>
-                <a href="http://www.ki.se"><img alt="Karolinska Institutet" src="/course-common/assets/img/logo/ki.png" style="height:65px;padding:0px 5px 0px 5px" ></a>
-                <a href="http://www.kth.se"><img alt="KTH Royal Institute of Technology" src="/course-common/assets/img/logo/kth.png" style="height:65px;padding:5px" ></a>
-                <a href="http://www.lu.se"><img alt="Lund University" src="/course-common/assets/img/logo/lu.jpg" style="height:65px;padding:5px 0px 5px 0px" ></a>
-                <a href="http://www.nrm.se"><img alt="Swedish Museum of Natural History" src="/course-common/assets/img/logo/nrm.gif" style="height:65px;padding:0px 0px 0px 0px" ></a>
-                <a href="http://www.slu.se"><img alt="Swedish University of Agricultural Sciences" src="/course-common/assets/img/logo/slu.png" style="height:65px;padding:0px 5px 0px 0px" ></a>
-                <a href="http://www.su.se"><img alt="Stockholm University" src="/course-common/assets/img/logo/su.png" style="height:65px;padding:5px 0px 5px 5px" ></a>
-                <a href="http://www.umu.se"><img alt="Umeå University" src="/course-common/assets/img/logo/umu.jpg" style="height:65px;padding:5px 0px 5px 0px" ></a>
-                <a href="http://www.uu.se"><img alt="Uppsala University" src="/course-common/assets/img/logo/uu.png" style="height:65px;padding:5px" ></a>
-                <a href="https://www.wallenberg.com/kaw/en"><img alt="Knuth and Alice Wallenberg Foundation" src="/course-common/assets/img/logo/kaw.png" style="height:65px;padding:5px" ></a>
-                <!-- <a href="http://www.elixir-europe.org"><img alt="ELIXIR" src="/course-common/assets/img/logo/elixir.png" style="height:65px;padding:5pxi;float:right" ></a> -->
+                <a href="http://www.vr.se"><img alt="Vetenskapsrådet" src="{{ site.baseurl }}/course-common/assets/img/logo/vetenskapsradet-logotyp.png" style="height:65px;padding:5px" ></a>
+                <a href="http://www.scilifelab.se"><img alt="Scilifelab" src="{{ site.baseurl }}/course-common/assets/img/logo/scilifelab.jpg" style="height:40px;padding:5px 0px 5px 0px" ></a>
+                <a href="http://www.liu.se"><img alt="Linköping University" src="{{ site.baseurl }}/course-common/assets/img/logo/liu.jpg" style="height:65px;padding:5px" ></a>
+                <a href="http://www.chalmers.se"><img alt="Chalmers University" src="{{ site.baseurl }}/course-common/assets/img/logo/chalmers.png" style="height:65px;padding:5px" ></a>
+                <a href="http://www.gu.se"><img alt="University of Gothenburg" src="{{ site.baseurl }}/course-common/assets/img/logo/gu.jpg" style="height:65px;padding:5px" ></a>
+                <a href="http://www.ki.se"><img alt="Karolinska Institutet" src="{{ site.baseurl }}/course-common/assets/img/logo/ki.png" style="height:65px;padding:0px 5px 0px 5px" ></a>
+                <a href="http://www.kth.se"><img alt="KTH Royal Institute of Technology" src="{{ site.baseurl }}/course-common/assets/img/logo/kth.png" style="height:65px;padding:5px" ></a>
+                <a href="http://www.lu.se"><img alt="Lund University" src="{{ site.baseurl }}/course-common/assets/img/logo/lu.jpg" style="height:65px;padding:5px 0px 5px 0px" ></a>
+                <a href="http://www.nrm.se"><img alt="Swedish Museum of Natural History" src="{{ site.baseurl }}/course-common/assets/img/logo/nrm.gif" style="height:65px;padding:0px 0px 0px 0px" ></a>
+                <a href="http://www.slu.se"><img alt="Swedish University of Agricultural Sciences" src="{{ site.baseurl }}/course-common/assets/img/logo/slu.png" style="height:65px;padding:0px 5px 0px 0px" ></a>
+                <a href="http://www.su.se"><img alt="Stockholm University" src="{{ site.baseurl }}/course-common/assets/img/logo/su.png" style="height:65px;padding:5px 0px 5px 5px" ></a>
+                <a href="http://www.umu.se"><img alt="Umeå University" src="{{ site.baseurl }}/course-common/assets/img/logo/umu.jpg" style="height:65px;padding:5px 0px 5px 0px" ></a>
+                <a href="http://www.uu.se"><img alt="Uppsala University" src="{{ site.baseurl }}/course-common/assets/img/logo/uu.png" style="height:65px;padding:5px" ></a>
+                <a href="https://www.wallenberg.com/kaw/en"><img alt="Knuth and Alice Wallenberg Foundation" src="{{ site.baseurl }}/course-common/assets/img/logo/kaw.png" style="height:65px;padding:5px" ></a>
+                <!-- <a href="http://www.elixir-europe.org"><img alt="ELIXIR" src="{{ site.baseurl }}/course-common/assets/img/logo/elixir.png" style="height:65px;padding:5pxi;float:right" ></a> -->
                 </p>
 </div>
 </div>
@@ -52,7 +52,7 @@
   <script src="//code.jquery.com/jquery-3.1.1.min.js"></script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-  <script src="/course-common/assets/js/calendarParser.js"></script>
+  <script src="{{ site.baseurl }}/course-common/assets/js/calendarParser.js"></script>
 
   <!--  Additional scripts for page -->
   {% for js_name in page.extrajs %}
@@ -60,4 +60,4 @@
   {% endfor %}
 
   <!-- This needs to be loaded last -->
-  <script src="/course-common/assets/js/init.js"></script>
+  <script src="{{ site.baseurl }}/course-common/assets/js/init.js"></script>
