--- a/includes/head.html
+++ b/includes/head.html
@@ -3,11 +3,11 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no"/>
 
-  <link rel="apple-touch-icon" sizes="180x180" href="/course-common/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/course-common/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/course-common/favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="{{ site.baseurl }}/course-common/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="{{ site.baseurl }}/course-common/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="{{ site.baseurl }}/course-common/favicon-16x16.png">
   <link rel="manifest" href="/manifest.json">
-  <link rel="mask-icon" href="/course-common/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="mask-icon" href="{{ site.baseurl }}/course-common/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="theme-color" content="#ffffff">
 
   <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
@@ -23,5 +23,5 @@
     <link href='//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href='//fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 
-  <link href="{{ "/course-common/css/main.css" | prepend: site.baseurl }}" type="text/css" rel="stylesheet" media="screen,projection"/>
+  <link href="{{ "{{ site.baseurl }}/course-common/css/main.css" | prepend: site.baseurl }}" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
