--- a/includes/topnav.html
+++ b/includes/topnav.html
@@ -6,7 +6,7 @@
         {% if n.divider %}
           <li class="divider"></li>
         {% endif %}
-        <li> <a href="{{ n.url }}">{{ n.title }}</a></li>
+        <li> <a href="{{site.baseurl}}/{{ n.url }}">{{ n.title }}</a></li>
       {% endfor %}
     </ul>
   {% endif %}
@@ -19,9 +19,9 @@
       <ul class="right hide-on-med-and-down">
       {% for m in site.menu %}
         {% if m.submenus %}
-          <li><a class="dropdown-button" href="{{ m.url }}" data-activates="{{ m.title }}">{{ m.title }}<i class="material-icons right">arrow_drop_down</i></a></li>
+        <li><a class="dropdown-button" href="{{ site.baseurl }}/{{ m.url }}" data-activates="{{ m.title }}">{{ m.title }}<i class="material-icons right">arrow_drop_down</i></a></li>
         {% else %}
-          <li><a href="{{ m.url }}">{{ m.title }}</a></li>
+          <li><a href="{{ site.baseurl }}/{{ m.url }}">{{ m.title }}</a></li>
         {% endif %}
       {% endfor %}
 
@@ -49,7 +49,7 @@
             </ul>
            </li>
         {% else %}
-          <li class="no-padding"><a style="padding: 0px 16px" href="{{ m.url }}">{{ m.title }}</a></li>
+          <li class="no-padding"><a style="padding: 0px 16px" href="{{ site.baseurl }}/{{ m.url }}">{{ m.title }}</a></li>
         {% endif %}
       {% endfor %}
       </ul>
