--- a/sass/_nbis.scss
+++ b/sass/_nbis.scss
@@ -8,115 +8,118 @@
 
 nav ul a,
 nav .brand-logo {
-  color: white;
-  img {
-          height: 64px;
-  }
+    color: white;
+    img {
+        height: 64px;
+    }
 }
 
 nav {
-        background-color: $textgray;
-        ul li {
-                list-style-type: none;
-        }
-        i.right {
-                float: right;
-                margin-left: -5px;
-        }
-
+    background-color: $textgray;
+    ul li {
+        list-style-type: none;
+    }
+    i.right {
+        float: right;
+        margin-left: -5px;
+    }
 }
 
 .dropdown-content li > a, .dropdown-content li > span {
-        color: $textgray;
+    color: $textgray;
 }
+
 p {
-  line-height: 2rem;
+    line-height: 2rem;
 }
 
 .button-collapse {
-  color: #26a69a;
+    color: #26a69a;
 }
 
 .parallax-container {
-  min-height: 480px;
-  line-height: 0;
-  height: auto;
-  color: rgba(255,255,255,.9);
+    min-height: 480px;
+    line-height: 0;
+    height: auto;
+    color: rgba(255,255,255,.9);
+    .section {
+        width: 100%;
+    }
 }
-  .parallax-container .section {
-    width: 100%;
-  }
-
-
 
 @media only screen and (max-width : 600px) {
-  #index-banner .section {
-    top: 0;
-  }
+    #index-banner .section {
+        top: 0;
+    }
 }
 
 .icon-block {
-  padding: 0 15px;
-}
-.icon-block .material-icons {
-  font-size: inherit;
+    padding: 0 15px;
+    .material-icons {
+        font-size: inherit;
+    }
 }
 
 footer.page-footer {
-  margin: 0;
-        background-color: $scilifegreen;
+    margin: 0;
+    background-color: $scilifegreen;
 }
 
-.row a {
-    color: blue;
+.row {
+    a {
+        color: blue;
     }
 
-.row .itembox {
-    margin-right: 40px;
-    padding: 20px;
-    height: 100%;
+    .itembox {
+        margin-right: 40px;
+        padding: 20px;
+        height: 100%;
     }
+}
 
 .itembox {
     padding: 50px;
     background-color: #f3f1f0;
     border-left: 5px solid $scilifegreen;
+
+    .itembox a {
+        color: $scilifegreen;
+        border-bottom: 1px dashed;
     }
 
-.itembox a {
-    color: $scilifegreen;
-    border-bottom: 1px dashed;
+    .itemtitle {
+        margin-right: 40px;
+        font-size: 22px;
     }
 
-.itembox .itemtitle {
-    margin-right: 40px;
-    font-size: 22px;
-    }
-.itembox .itemurls {
-    font-size: 15px;
-    }
-.itembox .itemversion {
-    font-size: 15px;
+    .itemurls {
+        font-size: 15px;
     }
 
-.itembox .itemunderdev{
-    font-size: 15px;
-    color: $elixirorange;
-    font-variant: small-caps;
+    .itemversion {
+        font-size: 15px;
     }
-.itembox .itemdescription {
-    padding-right: 50px;
-    padding-top: 25px;
+    .itemunderdev{
+        font-size: 15px;
+        color: $elixirorange;
+        font-variant: small-caps;
     }
-.itembox .itemdetails{
-    font-size: 15px;
+    .itemdescription {
+        padding-right: 50px;
+        padding-top: 25px;
     }
+    .itemdetails{
+        font-size: 15px;
+    }
+}
+
+
+
 
 
 .bg-dark {
-
-        color: white;
-        background: rgba(40, 40, 40, 0.4);
+    color: white;
+    background: rgba(40, 40, 40, 0.4);
 }
 
 nav.main .scilifelogo {
@@ -124,57 +127,57 @@ nav.main .scilifelogo {
 }
 
 body {
-        background: #ffffff url(/course-common/assets/img/pale_grey_slight_texture.jpg) top left repeat;
-        color: $textgray;
-        line-height:1.6;
-        font-size:18px;
+    background: #ffffff url(/course-common/assets/img/pale_grey_slight_texture.jpg) top left repeat;
+    color: $textgray;
+    line-height:1.6;
+    font-size:18px;
 }
-
-.bread ul li {
-            list-style-type: disc;
-    }
 
 .bread {
-        padding-top: 48px;
-        margin: 48px;
-        p {
-          text-align:justify;
-       }
-       ul {
-                   list-style-position: inside;
-                   margin-left:10px;
-           }
-       dl {
-                   margin-left:10px;
-           }
+    padding-top: 48px;
+    margin: 48px;
+    p {
+        text-align:justify;
+    }
+    ul {
+        list-style-position: inside;
+        margin-left:10px;
+        li {
+            list-style-type: disc;
+        }
+    }
+    dl {
+        margin-left:10px;
+    }
 }
+
 .blurb {
-        font-size: 24px;
-        p {
-          text-align:justify;
-       }
+    font-size: 24px;
+    p {
+        text-align:justify;
+    }
 }
 
 img.flip {
-        -moz-transform: scaleX(-1);
-        -o-transform: scaleX(-1);
-        -webkit-transform: scaleX(-1);
-        transform: scaleX(-1);
-        filter: FlipH;
-        -ms-filter: "FlipH";
+    -moz-transform: scaleX(-1);
+    -o-transform: scaleX(-1);
+    -webkit-transform: scaleX(-1);
+    transform: scaleX(-1);
+    filter: FlipH;
+    -ms-filter: "FlipH";
 }
 
 .transition,.play,.card {
-        -webkit-transition: .5s;
-        -moz-transition: .5s;
-        transition: .5s;
-        -webkit-transition-timing-function: cubic-bezier(.4,0,.5,1);
-        -moz-transition-timing-function: cubic-bezier(.4,0,.5,1);
-        transition-timing-function: cubic-bezier(.4,0,.5,1);
+    -webkit-transition: .5s;
+    -moz-transition: .5s;
+    transition: .5s;
+    -webkit-transition-timing-function: cubic-bezier(.4,0,.5,1);
+    -moz-transition-timing-function: cubic-bezier(.4,0,.5,1);
+    transition-timing-function: cubic-bezier(.4,0,.5,1);
 }
 
 .card {
-/*    width: 250px;*/
+    /*    width: 250px;*/
     height: 350px;
     background-size: cover;
     background-position: center center;
@@ -208,32 +211,33 @@ img.flip {
 nav .navlogo img {
     height: 64px;
     padding: 5px;
-    }
+}
+
 nav .navlogo:hover {
-            background-color: rgba(0, 0, 0, 0.0);
-    }
+    background-color: rgba(0, 0, 0, 0.0);
+}
 
 .elixirorangebg {
-        background-color: $elixirorange;
+    background-color: $elixirorange;
 }
 .elixirorangebg:hover {
-        background-color: $scilifegreen;
+    background-color: $scilifegreen;
 }
 
 .topborder {
-        border-top-style: solid;
-        border-color: $textgray;
-        border-width: 2px;
+    border-top-style: solid;
+    border-color: $textgray;
+    border-width: 2px;
 }
 .bottomborder {
-        border-bottom-style: solid;
-        border-color: $textgray;
-        border-width: 2px;
+    border-bottom-style: solid;
+    border-color: $textgray;
+    border-width: 2px;
 }
 .button-collapse {
-            color: $scilifegreen;
-    }
+    color: $scilifegreen;
+}
 
 .compact td {
-        padding: 5px;
+    padding: 5px;
 }
