Propagate baseurl into stylesheet
Former-commit-id: a5b1e61c4ea207e33cf329a60d119d2097f6c8a2
Former-commit-id: 5b1138fc0ef1fb8ff0ac5ef0f702c86d6ba10c77

--- a/css/main.scss
+++ b/css/main.scss
@@ -7,9 +7,9 @@
 $elixirorange: #F47D20;
 $scilifegreen: #85BE42;
 $textgray: #444;
+$baseurl: "{{site.baseurl}}";
 
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import "nbis";
 @import "ena";
-
 ;
