Whitespace fix for layouts/default.html
Former-commit-id: 1a6d6023ab3033f6a00cf1b99061da1b5f4386f3
Former-commit-id: 888fe2bd8b4612920aa92e0657370280290c9ad8

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -6,24 +6,18 @@ logosnav: true
 
 <!DOCTYPE html>
 <html>
-
   {% include head.html %}
-
   <body>
   {% include topnav.html %}
 
   <div class="container z-depth-2" style="background-color:white;padding-bottom:64px">
-  <div class="col s12 bread">
-                
-        {{ content }}
+    <div class="col s12 bread">
+      {{ content }}
+    </div>
   </div>
-  </div>
-    <div class="row" style="padding-bottom:64px">
-              </div>
+  <div class="row" style="padding-bottom:64px"></div>
 
-
-    {% include footer.html %}
+  {% include footer.html %}
 
   </body>
-
 </html>
