--- a/layouts/default.html
+++ b/layouts/default.html
@@ -10,12 +10,11 @@ logosnav: true
   <body>
   {% include topnav.html %}
 
-  <div class="container z-depth-2" style="background-color:white;padding-bottom:64px">
+  <div class="container z-depth-2" style="background-color:white;padding-bottom:64px;margin-bottom:64px;">
     <div class="col s12 bread">
       {{ content }}
     </div>
   </div>
-  <div class="row" style="padding-bottom:64px"></div>
 
   {% include footer.html %}
 
