Moved inline styles into css class
Former-commit-id: a25c99b2ef46a20a90f1252a5a3ee07631b606d5
Former-commit-id: c01b2de33b67eaae4872669390800de72b6d5c8d

--- a/sass/_nbis.scss
+++ b/sass/_nbis.scss
@@ -25,6 +25,12 @@ nav {
     }
 }
 
+.content {
+    background-color: white;
+    padding-bottom: 64px;
+    margin-bottom: 64px;
+}
+
 .dropdown-content li > a, .dropdown-content li > span {
     color: $textgray;
 }
