Removed NBIS Contact information
Former-commit-id: b76f7b61d350ccca9d4a52e7122fdfab85fb6501
Former-commit-id: 87c1fbd9d6544236df461eb3f3c337e2c2aad6c2

--- a/includes/footer.html
+++ b/includes/footer.html
@@ -1,22 +1,9 @@
   <footer class="page-footer topborder">
     <div class="container">
       <div class="row">
-        <div class="col l6 s12">
+        <div class="col s12">
           <h5 class="white-text">NBIS</h5>
           <p class="grey-text text-lighten-4">NBIS is a distributed national bioinformatics infrastructure, supporting life sciences in Sweden.</p>
-
-
-        </div>
-        <div class="col l6 s12">
-          <h5 class="white-text">Contact</h5>
-          <p class="white-text">
-          NBIS<br>
-          Uppsala University<br>         
-          SciLifeLab          <br>      
-          ICM -- Department of Cell and Molecular Biology<br>
-          Box 596                  <br>
-          S-751 24 Uppsala, SWEDEN  <br>
-          </p>
         </div>
       </div>
     </div>
