Moved more inline styles into css
Former-commit-id: 8edfac4627f1c607861955c3835f28f696c40ab1
Former-commit-id: 027166f59024e9be1b12357c644df2236b7a56b5

--- a/sass/_nbis.scss
+++ b/sass/_nbis.scss
@@ -83,6 +83,16 @@ footer.page-footer {
     }
 }
 
+#funding {
+    margin-bottom: 0px;
+    .logos {
+        text-align: center;
+        background-color: white;
+        padding-top: 10px;
+        padding-bottom: 10px;
+    }
+}
+
 .itembox {
     padding: 50px;
     background-color: #f3f1f0;
