--- a/includes/footer.html
+++ b/includes/footer.html
@@ -7,9 +7,9 @@
         </div>
       </div>
     </div>
-    <div id="funding" class="row" style="margin-bottom:0px">
+    <div id="funding" class="row">
       <div class="center-block">
-        <p style="text-align:center;background-color:white">
+        <p class="logos">
           <a href="http://www.vr.se"><img alt="Vetenskapsrådet" src="{{ site.baseurl }}/course-common/assets/img/logo/vetenskapsradet-logotyp.png" style="height:65px;padding:5px" ></a>
           <a href="http://www.scilifelab.se"><img alt="Scilifelab" src="{{ site.baseurl }}/course-common/assets/img/logo/scilifelab.jpg" style="height:40px;padding:5px 0px 5px 0px" ></a>
           <a href="http://www.liu.se"><img alt="Linköping University" src="{{ site.baseurl }}/course-common/assets/img/logo/liu.jpg" style="height:65px;padding:5px" ></a>
