Fixed syntax highlighting
Former-commit-id: 948518d7e52ac1facd2ba42fbedc3baccbf1b754
Former-commit-id: 90e337f23f5aaee870d94d4ddadc7293bcd11f5d

--- a/css/main.scss
+++ b/css/main.scss
@@ -12,4 +12,5 @@ $baseurl: "{{site.baseurl}}";
 // Import partials from `sass_dir` (defaults to `_sass`)
 @import "nbis";
 @import "ena";
+@import "syntax-highlighting";
 ;
