--- a/sass/_nbis.scss
+++ b/sass/_nbis.scss
@@ -93,6 +93,33 @@ footer.page-footer {
     }
 }
 
+code {
+    font-family: 'Lucida Sans', Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal;
+    font-size:13px;
+    color:#efefef;
+    text-shadow: 0px 1px 0px #000;
+    margin: 0 4px;
+    padding: 2px 6px;
+    background: #333;
+    border-radius: 2px;
+}
+
+pre {
+    padding:8px 15px;
+    background: #333333;
+    border-radius: 3px;
+    border:1px solid #c7c7c7;
+    overflow: auto;
+    overflow-y: hidden;
+
+    code {
+        margin: 0px;
+        padding: 0px;
+    }
+}
+
+
+
 .itembox {
     padding: 50px;
     background-color: #f3f1f0;
