--- a/sass/_nbis.scss
+++ b/sass/_nbis.scss
@@ -6,22 +6,32 @@
  * Made By MaterializeCSS.com
  */
 
-nav ul a,
-nav .brand-logo {
-    color: white;
-    img {
-        height: 64px;
-    }
-}
-
 nav {
     background-color: $textgray;
+
+    ul a {
+        color: white;
+        img {
+            height: 64px;
+        }
+    }
     ul li {
         list-style-type: none;
     }
     i.right {
         float: right;
         margin-left: -5px;
+    }
+    .scilifelogo {
+        margin-top: 17px;
+    }
+    .navlogo img {
+        height: 64px;
+        padding: 5px;
+    }
+
+    .navlogo:hover {
+        background-color: rgba(0, 0, 0, 0.0);
     }
 }
 
@@ -37,20 +47,6 @@ nav {
 
 p {
     line-height: 2rem;
-}
-
-.button-collapse {
-    color: #26a69a;
-}
-
-.parallax-container {
-    min-height: 480px;
-    line-height: 0;
-    height: auto;
-    color: rgba(255,255,255,.9);
-    .section {
-        width: 100%;
-    }
 }
 
 @media only screen and (max-width : 600px) {
@@ -74,12 +70,6 @@ footer.page-footer {
 .row {
     a {
         color: blue;
-    }
-
-    .itembox {
-        margin-right: 40px;
-        padding: 20px;
-        height: 100%;
     }
 }
 
@@ -118,57 +108,6 @@ pre {
     }
 }
 
-
-
-.itembox {
-    padding: 50px;
-    background-color: #f3f1f0;
-    border-left: 5px solid $scilifegreen;
-
-    .itembox a {
-        color: $scilifegreen;
-        border-bottom: 1px dashed;
-    }
-
-    .itemtitle {
-        margin-right: 40px;
-        font-size: 22px;
-    }
-
-    .itemurls {
-        font-size: 15px;
-    }
-
-    .itemversion {
-        font-size: 15px;
-    }
-    .itemunderdev{
-        font-size: 15px;
-        color: $elixirorange;
-        font-variant: small-caps;
-    }
-    .itemdescription {
-        padding-right: 50px;
-        padding-top: 25px;
-    }
-    .itemdetails{
-        font-size: 15px;
-    }
-}
-
-
-
-
-
-.bg-dark {
-    color: white;
-    background: rgba(40, 40, 40, 0.4);
-}
-
-nav.main .scilifelogo {
-    margin-top: 17px;
-}
-
 body {
     background: #ffffff url($baseurl + "/course-common/assets/img/pale_grey_slight_texture.jpg") top left repeat;
     color: $textgray;
@@ -194,13 +133,6 @@ body {
     }
 }
 
-.blurb {
-    font-size: 24px;
-    p {
-        text-align:justify;
-    }
-}
-
 img.flip {
     -moz-transform: scaleX(-1);
     -o-transform: scaleX(-1);
@@ -210,7 +142,7 @@ img.flip {
     -ms-filter: "FlipH";
 }
 
-.transition,.play,.card {
+.transition,.play {
     -webkit-transition: .5s;
     -moz-transition: .5s;
     transition: .5s;
@@ -219,52 +151,10 @@ img.flip {
     transition-timing-function: cubic-bezier(.4,0,.5,1);
 }
 
-.card {
-    /*    width: 250px;*/
-    height: 350px;
-    background-size: cover;
-    background-position: center center;
-    background-repeat: no-repeat;
-    background-color: $scilifegreen;
-    border-radius: 3px;
-    overflow: hidden;
-    box-shadow: 0 3px 9px rgba(0,0,0,.3);
-    display: inline-block;
-    position: relative;
-    margin: 20px;
-    display: inline-block;
-    -webkit-transform: scale(1);
-    -moz-transform: scale(1);
-    transform: scale(1);
-}
-
-.card:hover,.card.active {
-    box-shadow: 0 5px 15px rgba(0,0,0,0.2) !important;
-    -webkit-transform: scale(1.05) !important;
-    -moz-transform: scale(1.05) !important;
-    transform: scale(1.05) !important;
-}
-
 .nodec a {
     font-weight:normal;
     text-decoration:none;
     color:#444;
-}
-
-nav .navlogo img {
-    height: 64px;
-    padding: 5px;
-}
-
-nav .navlogo:hover {
-    background-color: rgba(0, 0, 0, 0.0);
-}
-
-.elixirorangebg {
-    background-color: $elixirorange;
-}
-.elixirorangebg:hover {
-    background-color: $scilifegreen;
 }
 
 .topborder {
@@ -272,11 +162,13 @@ nav .navlogo:hover {
     border-color: $textgray;
     border-width: 2px;
 }
+
 .bottomborder {
     border-bottom-style: solid;
     border-color: $textgray;
     border-width: 2px;
 }
+
 .button-collapse {
     color: $scilifegreen;
 }
