Some table styles
Former-commit-id: 65651b1bc96c271c9a27d5c910eeb4e8e5a78e35
Former-commit-id: f481fb28dc826417fcae00e0a6359b85690c7958

--- a/sass/_nbis.scss
+++ b/sass/_nbis.scss
@@ -104,6 +104,19 @@ pre {
     }
 }
 
+table {
+    line-height: 1.0rem;
+}
+
+table.border {
+    thead {
+        border-bottom: none;
+    }
+    tbody {
+        border: 1px solid black;
+    }
+}
+
 html {
     font-size: 90%;
 }
