--- a/includes/topnav.html
+++ b/includes/topnav.html
@@ -1,4 +1,4 @@
-  <!-- define dropdowns first --!>
+  <!-- define dropdowns first -->
 {% for m in site.menu %}
   {% if m.submenus %}
     <ul id="{{ m.title }}" class="dropdown-content">
