--- a/includes/head.html
+++ b/includes/head.html
@@ -17,5 +17,5 @@
     <link href='//fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
     <link href='//fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
 
-    <link href="{{site.baseurl}}/course-common/css/main.css" type="text/css" rel="stylesheet" media="screen,projection"/>
+    <link href="{{site.baseurl}}/workshop-common/css/main.css" type="text/css" rel="stylesheet" media="screen,projection"/>
 </head>
