--- a/sass/_nbis.scss
+++ b/sass/_nbis.scss
@@ -76,8 +76,8 @@ footer.page-footer {
 }
 
 code {
-    font-family: 'Lucida Sans', Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal;
-    font-size:13px;
+    font-family: Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal, monospace;
+    font-size: 13px;
     color: #333;
     background: #efefef;
     border: 1px solid #c7c7c7;
