--- a/sass/_nbis.scss
+++ b/sass/_nbis.scss
@@ -136,7 +136,7 @@ body {
     padding-top: 48px;
     margin: 48px;
     ul {
-        margin-left:10px;
+        margin-left: 1.2rem;
         li {
             list-style-type: disc;
         }
