--- a/sass/_nbis.scss
+++ b/sass/_nbis.scss
@@ -92,8 +92,9 @@ code {
 }
 
 pre {
-    padding:8px 15px;
+    color:#efefef;
     background: #333;
+    padding:8px 15px;
     border-radius: 3px;
     border:1px solid #c7c7c7;
     overflow: auto;
@@ -101,10 +102,10 @@ pre {
 
     code {
         color:#efefef;
+        background: #333;
         text-shadow: 0px 1px 0px #000;
         margin: 0px;
         padding: 0px;
-        background: #333;
         border: none;
     }
 }
