New layout: default-overview
Inspired by code refinery. By changing layout to default-overview you can
specify this metadata and get a nice info box in the page. The following
metadata tags are supported:

teaching: <minutes>
exercises: <minutes>
questions:
  - a few questions
  - for the lesson
objectives:
  - and also objectives
  - for the lesson
  - can be one or more

--- a/sass/_nbis.scss
+++ b/sass/_nbis.scss
@@ -196,3 +196,28 @@ img.flip {
 .compact td {
     padding: 5px;
 }
+
+.panel-info {
+    border: 1px solid black;
+
+    .panel-heading {
+        background-color: $textgray;
+        color: white;
+        h3 {
+            font-size: 2rem;
+            margin-top: 0px;
+        }
+    }
+
+    .panel-body {
+        padding-left: 1em;
+        .row {
+            margin-bottom: 5px;
+        }
+        ul {
+            margin-top: 2px;
+            margin-bottom: 2px;
+            margin-left: 2rem;
+        }
+    }
+}
