Tweaked the layout for default-overview
Added title and moved a couple of <br />

--- a/layouts/default-overview.html
+++ b/layouts/default-overview.html
@@ -12,6 +12,7 @@ logosnav: true
 
   <div class="container z-depth-2 content">
     <div class="col s12 bread">
+        <h1>{{ page.title }}</h1>
       {% include overview.html %}
       {{ content }}
     </div>
