Much nicer layout

--- a/includes/toc.html
+++ b/includes/toc.html
@@ -1,4 +1,5 @@
-<div id="toc-sidebar" class="z-depth-2">
-    <div class="toc-header">Table of contents</div>
-    <ul id="toc"></ul>
+<div class="l2 s12">
+    <div id="toc-sidebar">
+        <ul id="toc"></ul>
+    </div>
 </div>
