--- a/layouts/default-toc.html
+++ b/layouts/default-toc.html
@@ -10,12 +10,12 @@ logosnav: true
   <body>
   {% include topnav.html %}
 
+  {% include toc.html %}
   <div class="container">
-    {% include toc.html %}
 
     <div class="row"></div>
     <div class="row">
-      <div class="col s10 z-depth-2 content">
+      <div class="col s12 l10 z-depth-2 content">
         {{ content }}
       </div>
     </div>
