--- a/layouts/default-overview.html
+++ b/layouts/default-overview.html
@@ -10,11 +10,21 @@ logosnav: true
   <body>
   {% include topnav.html %}
 
-  <div class="container z-depth-2 content">
-    <div class="col s12 bread">
+  {% unless page.notoc %}
+  {% include toc.html %}
+  {% endunless %}
+  <div class="container">
+    <div class="row"></div>
+    <div class="row">
+      {% if page.notoc %}
+      <div class="col s12 z-depth-2 content">
+      {% else %}
+      <div class="col s12 l10 z-depth-2 content">
+      {% endif %}
         <h1>{{ page.title }}</h1>
-      {% include overview.html %}
-      {{ content }}
+        {% include overview.html %}
+        {{ content }}
+      </div>
     </div>
   </div>
 
