--- a/css/main.scss
+++ b/css/main.scss
@@ -7,8 +7,9 @@
 $elixirorange: #F47D20;
 $scilifegreen: #85BE42;
 $textgray: #444;
+$light_textgray: #c6c6c6;
 $baseurl: "{{site.baseurl}}";
 
 // Import partials from `sass_dir` (defaults to `_sass`)
-@import "nbis";
+@import "elixir";
 @import "syntax-highlighting";
