--- a/includes/footer.html
+++ b/includes/footer.html
@@ -2,8 +2,9 @@
     <div class="container">
       <div class="row">
         <div class="col s12">
-          <h5 class="white-text">NBIS</h5>
-          <p class="grey-text text-lighten-4">NBIS is a distributed national bioinformatics infrastructure, supporting life sciences in Sweden.</p>
+          <h5 class="white-text">Elixir</h5>
+          <p class="grey-text text-lighten-4">
+          ELIXIR is an intergovernmental organisation that brings together life science resources from across Europe.</p>
         </div>
       </div>
     </div>
