--- a/includes/footer.html
+++ b/includes/footer.html
@@ -12,7 +12,7 @@
       <div class="center-block">
         <p class="logos">
           <!-- a href="http://www.vr.se"><img alt="Vetenskapsrådet" src="{{ site.baseurl }}/workshop-common/assets/img/logo/vetenskapsradet-logotyp.png" style="height:65px;padding:5px" ></a-->
-          <a href="http://www.scilifelab.se"><img alt="Scilifelab" src="{{ site.baseurl }}/workshop-common/assets/img/logo/scilifelab.jpg" style="height:40px;padding:5px 0px 5px 0px" ></a>
+          <a href="http://www.scilifelab.se"><img alt="Scilifelab" src="{{ site.baseurl }}/workshop-common/assets/img/logo/scilifelab.jpg" style="height:40px;padding:0px 0px 10px 0px" ></a>
           <!-- a href="http://www.liu.se"><img alt="Linköping University" src="{{ site.baseurl }}/workshop-common/assets/img/logo/liu.jpg" style="height:65px;padding:5px" ></a-->
           <!-- a href="http://www.chalmers.se"><img alt="Chalmers University" src="{{ site.baseurl }}/workshop-common/assets/img/logo/chalmers.png" style="height:65px;padding:5px" ></a-->
           <!-- a href="http://www.gu.se"><img alt="University of Gothenburg" src="{{ site.baseurl }}/workshop-common/assets/img/logo/gu.jpg" style="height:65px;padding:5px" ></a-->
@@ -26,7 +26,7 @@
           <a href="http://www.uu.se"><img alt="Uppsala University" src="{{ site.baseurl }}/workshop-common/assets/img/logo/uu.png" style="height:65px;padding:5px" ></a>
           <a href="http://www.nbis.se"><img alt="NBIS" src="{{ site.baseurl }}/workshop-common/assets/img/logo/nbislogo-green.svg" style="height:50px;padding:5px" ></a>
 	  <!-- a href="https://www.wallenberg.com/kaw/en"><img alt="Knuth and Alice Wallenberg Foundation" src="{{ site.baseurl }}/workshop-common/assets/img/logo/kaw.png" style="height:65px;padding:5px" ></a-->
-          <a href="http://www.elixir-europe.org"><img alt="ELIXIR" src="{{ site.baseurl }}/workshop-common/assets/img/logo/elixir.png" style="height:65px;padding:5px" ></a>
+          <a href="http://www.elixir-europe.org"><img alt="ELIXIR" src="{{ site.baseurl }}/workshop-common/assets/img/logo/elixir.png" style="width:100px" ></a>
         </p>
       </div>
     </div>
