--- a/layouts/default.html
+++ b/layouts/default.html
@@ -7,6 +7,13 @@ logosnav: true
 <!DOCTYPE html>
 <html>
   {% include head.html %}
+<style>
+h2 { font-size: 2.5rem; }
+h3 { font-size: 2.2rem; }
+h4 { font-size: 1.9rem; }
+h5 { font-size: 1.3rem; }
+h6 { font-size: 1.0rem; }
+</style>
   <body>
   {% include topnav.html %}
 
