--- a/sass/_nbis.scss
+++ b/sass/_nbis.scss
@@ -31,6 +31,9 @@ nav {
     }
 }
 
+strong {
+    font-weight: 1000;
+}
 
 #toc-sidebar {
     @media screen and (min-width: 992px) {
@@ -252,6 +255,40 @@ img.flip {
 }
 
 .compact td {
+  padding: 5px;
+}
+
+.funding {
+  margin-bottom: 0;
+  .logos {
+    background-color: white;
+    padding-bottom: 10px;
+    padding-top: 10px;
+    text-align: center;
+  }
+}
+
+h1 { font-size: 2.5em; }
+h2 { font-size: 1.7em; }
+h3 { font-size: 1.4em; }
+h4 { font-size: 1.2em; font-style: italic; }
+h5 { font-size: 1em; font-weight: bold; }
+h6 { font-size: 1em; font-style: italic; }
+
+h1, h2, h3, h4, h5, h6 {
+    margin: 1em 0 1em 0;
+}
+
+blockquote.notice {
+    border-left: 5px solid gray;
+}
+
+.projectlist {
+      list-style-type: none;
+    }
+ 
+label.checkbox {
+    height: initial;
     padding: 5px;
 }
 
